# LowLatencyProgramming

./: CMakeLists.txt  README.md
branch_prediction/: CMakeLists.txt  benchmark.cpp  branch_prediction.h
docs/: branch_prediction.md  cache_warming.md  inlining.md  kernel_bypass.md  loop_unrolling.md  predication.md  prefetching.md  resource_contention.md  simd_instructions.md
examples/branch_prediction/: CMakeLists.txt  benchmark.cpp  branch_prediction.h
examples/inlining/: CMakeLists.txt  inlining.h
examples/lock_contention/: CMakeLists.txt  benchmark.cpp  lock_contention.h
examples/loop_unrolling/: benchmark.cpp  loop_unrolling.h
examples/predication/: README.md  benchmark.cpp  predication.h
examples/prefetching/: benchmark.cpp  prefetching.h
examples/resource_contention/: CMakeLists.txt  benchmark.cpp  resource_contention.h
examples/simd_instructions/: CMakeLists.txt  benchmark.cpp  simd_instructions.h
inlining/: CMakeLists.txt  README.md  benchmark.cpp  inlining.cpp  inlining.h
jmpp-benchmarks/: README.md  jmh-result.csv  pom.xml  run.sh
jmpp-benchmarks/pcap_generator/: pcap_generator.py
jmpp-benchmarks/src/main/java/PacketProcessor/: Main.java  PacketProcessor.java
jmpp-benchmarks/src/main/java/PacketProcessor/DisruptorPacketProcessor/: AbstractDisruptorProcessor.java  FilterRewriteJoinDisruptorProcessor.java  MultipleConsumerDisruptorProcessor.java  MultipleProducerDisruptorProcessor.java  PipelineDisruptorProcessor.java
jmpp-benchmarks/src/main/java/PacketProcessor/QueuePacketProcessor/: AbstractQueueProcessor.java  FilterRewriteJoinQueueProcessor.java  MultipleConsumerQueueProcessor.java  MultipleProducerQueueProcessor.java  PipelineQueueProcessor.java
jmpp-benchmarks/src/main/java/PacketProcessorBenchmarks/: BenchmarkFilterRewriteJoinProcessor.java  BenchmarkMultipleProducerProcessor.java
jmpp-benchmarks/src/main/resources/: example_one.pcap  input_ten_thousand.pcap  input_thousand.pcap
jmpp-benchmarks/src/main/resources/inputs/: input_1.pcap
jmpp-benchmarks/src/main/resources/inputs/copies/: input_1_10.pcap  input_1_100.pcap  input_1_10000.pcap  input_2_1000.pcap
jmpp-benchmarks/src/test/java/QueuePacketProcessorTests/: FilterTest.java  ReaderTest.java  WriterTest.java
jmpp-benchmarks/src/test/resources/PacketWriterTest/: input_single.pcap
loop_unrolling/: CMakeLists.txt  README.md  benchmark.cpp  loop_unrolling.h
packet-processor/: jmh-result.csv  pom.xml
packet-processor/pcap_generator/: input.pcap  pcap_generator.py
packet-processor/src/main/java/: FilterProcessor.java  PacketProcessor.java  PcapParser.java
packet-processor/src/main/java/ClassicPacketProcessor/: FilterProcessor.java  PacketProcessor.java
packet-processor/src/main/java/ClassicPacketProcessor/components/: PacketFilter.java  PacketProducer.java  PacketWriter.java
packet-processor/src/main/java/ClassicPacketProcessor/utils/: PoisonPacket.java
packet-processor/src/main/java/PacketProcessor/: AbstractPacketProcessor.java  FilterProcessor.java  Main.java  PacketProcessor.java
packet-processor/src/main/java/PacketProcessor/DisruptorPacketProcessor/: AbstractDisruptorProcessor.java  AbstractQueueProcessor.java  FilterAndDropDisruptorProcessor.java  FilterAndDropProcessor.java  FilterAndWriteDisruptorProcessor.java  FilterAndWriteProcessor.java  FilterProcessor.java  FilterRewriteJoinDisruptorProcessor.java  ForkJoinDisruptorProcessor.java  ForwardingDisruptorProcessor.java  ForwardingProcessor.java  MultipleConsumerDisruptorProcessor.java  PipelineDisruptorProcessor.java  RewritePortDisruptorProcessor.java
packet-processor/src/main/java/PacketProcessor/QueuePacketProcessor/: AbstractQueueProcessor.java  FilterAndDropProcessor.java  FilterAndDropQueueProcessor.java  FilterAndWriteProcessor.java  FilterAndWriteQueueProcessor.java  FilterProcessor.java  ForkJoinQueueProcessor.java  ForwardingProcessor.java  ForwardingQueueProcessor.java  MultipleProducerQueueProcessor.java  RewritePortQueueProcessor.java
packet-processor/src/main/java/PacketProcessor/components/: PacketFilter.java  PacketProducer.java  PacketWriter.java
packet-processor/src/main/java/PacketProcessor/utils/: PoisonPacket.java
packet-processor/src/main/java/PacketProcessorBenchmarks/: BenchmarkClassicPacketProcessor.java  BenchmarkDisruptorPacketProcessor.java  BenchmarkFilterAndDropProcessor.java  BenchmarkFilterAndWriteProcessor.java  BenchmarkFilterProcessor.java  BenchmarkFilterRewriteJoinProcessor.java  BenchmarkForkJoinProcessor.java  BenchmarkForwardingProcessor.java  BenchmarkMultipleConsumerProcessor.java  BenchmarkMultipleProducerProcessor.java  BenchmarkPipelineProcessor.java  BenchmarkQueuePacketProcessor.java  BenchmarkRewritePortProcessor.java
packet-processor/src/main/java/PacketProcessorBenchmarks/DisruptorBenchmarks/: BenchmarkFilterProcessor.java  BenchmarkForwardingProcessor.java
packet-processor/src/main/java/PacketProcessorBenchmarks/QueueBenchmarks/: BenchmarkFilterProcessor.java  BenchmarkForwardingProcessor.java
packet-processor/src/main/java/components/: PacketFilter.java  PacketProducer.java  PacketWriter.java
packet-processor/src/main/java/utils/: PoisonPacket.java
packet-processor/src/main/resources/: example_three.pcap  example_two.pcap  input.pcap  single_input.pcap  tcp_output.pcap  udp_output.pcap
packet-processor/src/test/java/: PacketFilterTest.java  PacketProcessorTest.java  PacketProducerTest.java  PacketWriterTest.java
packet-processor/src/test/java/DisruptorPacketProcessorTests/: PacketReaderTest.java  ReaderTest.java
packet-processor/src/test/java/QueuePacketProcessorTests/: FilterTest.java  PacketFilterTest.java  PacketProducerTest.java  PacketReaderTest.java  PacketWriterTest.java  ReaderTest.java  WriterTest.java
packet-processor/src/test/resources/PacketFilterTest/: input_multiple.pcap
predication/: CMakeLists.txt  README.md  benchmark.cpp  predication.h
prefetching/: CMakeLists.txt  README.md  benchmark.cpp  prefetching.h
simd_instructions/: CMakeLists.txt  README.md  benchmark.cpp  simd_instructions.h
utils/: utils.h
(+44 files in other folders)
